--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,67 +1,3 @@
-:root {
-	--background-color: #3C3C3C;
-	--text-color: #F5F5F5;
-}
-
-body {
-	background-color: var(--background-color);
-	color: var(--text-color);
-	font-family: "Inter", sans-serif;
-	display: flex;
-}
-
-@media only screen and (min-width: 900px) {
-	.header {
-		position: fixed;
-		right: 0;
-		width: 50%;
-		height: 100%;
-		p, ul, h3 {
-			padding-left: 5rem;
-			padding-top: 0;
-		}
-		.name {
-			font-size: 50;
-			padding-bottom: 0;
-			padding-top: 4rem;
-		}
-	}
-
-	.content {
-		width: 50%;
-		box-sizing: border-box;
-		
-		.intro p {
-			line-height: 2;
-			padding: 5rem;
-		}
-		.learn-exp {
-			h1 {
-				padding-left: 4rem;
-			}
-			ul {
-				list-style: none;
-			}
-			ul li {
-				display: flex;
-			}
-			.exp-title {
-				width: 30%;
-				border: solid 2px;
-				display: inline-block;
-			}
-			.exp-desc {
-				width: 70%;
-				border: solid 2px;
-			}
-		}
-
-
-	}
-}
-
-@media only screen and (max-width: 900px) {
-	body {
-		display: normal;
-	}
+h1 {
+	text-align: center;
 }
