--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,130 @@
-h1 {
-	text-align: center;
+:root {
+	--background-color: #051014;
+	--text-color: #F5F5F5;
+	--span-color: #1976D2;
+}
+
+body {
+	background-color: var(--background-color);
+	color: var(--text-color);
+	font-family: "JetBrains Mono";
+	display: normal;
+}
+
+@media screen 
+	and (min-device-width: 300px)
+	and (max-device-width: 800px) {
+	.header {
+		padding: 4rem;
+		padding-top: 2rem;
+		p {
+			line-height: 0.0;
+		}
+		.title {
+			align-items: center;
+			.name {
+				font-size: 120px;
+				font-weight: 2px;
+				line-spacing: 1.5;
+			}
+			.sub-name {
+				font-size: 3em;
+				font-style: italic;
+				padding-bottom: 1rem;
+			}
+		}
+		
+		
+		ul {
+			padding: 0;
+			list-style: none;
+			display: flex;
+			li {
+				img {
+					width: 50px;
+					height: 50px;
+					border-spacing: 20;
+					padding-right: 2rem;
+					padding-left: 0;
+				}
+				a {
+					display: none;
+				}
+			}
+		}
+	}
+
+	.content {
+		padding: 4rem;
+		.intro {
+			p {
+				font-size: 1rem;
+				text-align: justify;
+			}
+			span {
+				color: var(--span-color);
+			}
+		}
+	}
+
+}
+
+
+
+
+@media only screen 
+	and (min-device-width: 1100px) 
+	and (max-device-width: 1600px)
+	and (-webkit-min-device-pixel-ratio: 1) { 
+
+	
+	.header {
+		padding-top: 3rem;
+		width: 50%;
+		position: fixed;
+		right: 0;
+		.title {
+			p {
+				line-height: 0;
+			}
+			padding-left: 4rem;
+			padding-bottom: 0;
+			.name {
+				font-size: 70px;
+				padding-bottom: 0;
+			}
+			.sub-name {
+				padding-top: 0;
+				font-size: 30px;
+			}
+		}
+		ul {
+			display: normal;
+			padding-top: 2rem;
+			padding-left: 4rem;
+			list-style: none;
+			li {
+				padding-bottom: 1rem;
+				display: flex;
+				a {
+					text-decoration: none;
+					color: inherit;
+				}
+				img {
+					padding-right: 1rem;
+				}
+			}
+		}
+	}
+	.content {
+		padding: 4rem;
+		width: 50%;
+		box-sizing: border-box;
+		padding-top: 8rem;
+		.intro {
+			span {
+				color: var(--span-color);
+			}
+		}
+	}
 }
